Quick View: Prevent Slides from being stretched

--- a/sass/woocommerce/_quick-view.scss
+++ b/sass/woocommerce/_quick-view.scss
@@ -54,8 +54,6 @@
 			float: left;
 			padding: 20px 15px 20px 20px;
 			width: 50%;
-			max-height: 555px;
-			overflow: hidden;
 
 			img {
 				height: auto;
@@ -64,8 +62,17 @@
 				vertical-align: middle;
 			}
 
-			.slide {
-				text-align: center;
+			.flexslider {
+				background: transparent;
+				.flex-viewport {
+					max-height: 555px;
+					overflow: hidden;
+				}
+
+				.slide {
+					text-align: center;
+					background: #2d2d2d;
+				}
 			}
 
 			@media (max-width: 768px) {
